SET (CMAKE_C_COMPILER "gcc")
SET (CMAKE_CXX_COMPILER "g++")
PROJECT (Cavalia)
SET (CMAKE_CXX_FLAGS "-std=c++11 -mrtm -Wno-deprecated-declarations -DPROFILE_RTM -DOCC -DCUCKOO_INDEX -DBUILTIN_LOCK" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_RELEASE "-O3" CACHE INTERNAL "compiler options" FORCE)
IF (NOT CMAKE_BUILD_TYPE)
	SET (CMAKE_BUILD_TYPE "Release")
ENDIF ()
MESSAGE (STATUS "Build type: ${CMAKE_BUILD_TYPE}")
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/../boost_1_65_1)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/../zeromq-4.2.3/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/../libcuckoo-master)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/../boost_1_65_1/stage/lib)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/../zeromq-4.2.3/lib)

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Common)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Communication)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Database)

LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/build/Database)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/build/Communication)
ADD_SUBDIRECTORY (Communication)
ADD_SUBDIRECTORY (Database)
ADD_SUBDIRECTORY (TpccBenchmark)
